BG Image Z-index fixed // No Animation

--- a/frontend/src/components/Cards/Card.css
+++ b/frontend/src/components/Cards/Card.css
@@ -7,7 +7,7 @@
 .card__container__in_card {
     background: var(--white-color);
     border-radius: var(--main-border-radius);
-    width: 620px;
+    width: 600px;
     height: 720px;
     overflow: hidden;
 }
@@ -16,16 +16,21 @@
     margin-bottom: 20px;
 }
 
+.close__in_card {
+    float: right;
+    margin: 20px;
+}
+
 
 .card__title__in_card {
     font-size: 24px;
     letter-spacing: 0.5px;
     color: var(--dark-blue-main-text);
-    margin: 20px 60px 0;
+    margin: 20px 40px 0;
 }
 
 .card__subtitle__in_list {
-    margin: 0px 60px;
+    margin: 0px 40px;
     font-weight: 500;
 }
 
@@ -34,7 +39,7 @@
 }
 
 .due__date__container {
-    margin: 20px 60px 0;
+    margin: 20px 40px 0;
 }
 
 .due__date__title {
