--- a/frontend/src/components/Lists/Lists.css
+++ b/frontend/src/components/Lists/Lists.css
@@ -71,7 +71,7 @@
     height: 15px;
     width: 15px;
     border: none;
-    background-color: var(--white-button-main-color);
+    /* background-color: var(--white-button-main-color); */
 
 }
 
