--- a/frontend/src/components/boards/OneBoard.css
+++ b/frontend/src/components/boards/OneBoard.css
@@ -53,6 +53,7 @@
 .lists__page__bg__color {
     width: 100vw;
     height: 100vh;
+    z-index: -5;
 }
 
 .lists-page-position {
